Name:                   regex-tdfa
Version:                1.3.1.0
License:                BSD3
License-File:           LICENSE
Copyright:              Copyright (c) 2007, Christopher Kuklewicz
Author:                 Christopher Kuklewicz
Maintainer:             hvr@gnu.org
Stability:              Seems to work, but not POSIX yet
Homepage:               https://github.com/haskell-hvr/regex-tdfa
Bug-Reports:            https://github.com/haskell-hvr/regex-tdfa/issues
Synopsis:               Replaces/Enhances Text.Regex
Description:            A new all Haskell "tagged" DFA regex engine, inspired by libtre
Category:               Text
Tested-With:            GHC==7.6.3
                      , GHC==7.8.4
                      , GHC==7.10.3
                      , GHC==8.0.2
                      , GHC==8.2.2
                      , GHC==8.4.4
                      , GHC==8.6.5
                      , GHC==8.8.1
Build-Type:             Simple
extra-source-files:
  CHANGELOG.md
  test/cases/*.txt
Cabal-Version:          >= 1.8

source-repository head
  type:                git
  location:            git://github.com/haskell-hvr/regex-tdfa.git

flag devel
  description: enable flags that are useful for development
  default: False
  manual: True

flag force-O2
  default: True
  manual: True
  description:
    Force compiling with @ghc-options: -O2@. This is currently active by default because this was wired-in for past releases.
    .
    __NOTE__: You can control optimization levels on a per-package granularity via @cabal.project@ files; see <https://cabal.readthedocs.io/en/latest/nix-local-build.html#configuring-builds-with-cabal-project cabal's user-guide> for more details.

library
  hs-source-dirs:       lib
  Build-Depends:        array              >= 0.4 && < 0.6
                      , base               >= 4 && < 5
                      , bytestring         >= 0.10 && < 0.11
                      , containers         >= 0.5 && < 0.7
                      , ghc-prim
                      , mtl                == 2.*
                      , parsec             == 3.*
                      , regex-base         >= 0.93.1 && < 0.95
                      , text               >= 1.2.3 && < 1.3

  -- Support Semigroup instances uniformly
  --
  -- See also
  --  https://prime.haskell.org/wiki/Libraries/Proposals/SemigroupMonoid#RecommendedVariant
  --
  -- NB: This is the same logic `parsec.cabal` uses, so this doesn't
  -- add any new dependency that isn't already incurred by
  -- `regex-tdfa`'s transitive deps
  if !impl(ghc >= 8.0)
    build-depends:      fail
                      , semigroups == 0.18.*

  other-modules:          Paths_regex_tdfa
  Exposed-Modules:        Data.IntMap.CharMap2
                          Data.IntMap.EnumMap2
                          Data.IntSet.EnumSet2
                          Text.Regex.TDFA
                          Text.Regex.TDFA.ByteString
                          Text.Regex.TDFA.ByteString.Lazy
                          Text.Regex.TDFA.Common
                          Text.Regex.TDFA.CorePattern
                          Text.Regex.TDFA.IntArrTrieSet
                          Text.Regex.TDFA.NewDFA.Engine
                          Text.Regex.TDFA.NewDFA.Engine_FA
                          Text.Regex.TDFA.NewDFA.Engine_NC
                          Text.Regex.TDFA.NewDFA.Engine_NC_FA
                          Text.Regex.TDFA.NewDFA.Tester
                          Text.Regex.TDFA.NewDFA.Uncons
                          Text.Regex.TDFA.NewDFA.MakeTest
                          Text.Regex.TDFA.Pattern
                          Text.Regex.TDFA.ReadRegex
                          Text.Regex.TDFA.Sequence
                          Text.Regex.TDFA.String
                          Text.Regex.TDFA.TDFA
                          Text.Regex.TDFA.TNFA
                          Text.Regex.TDFA.Text
                          Text.Regex.TDFA.Text.Lazy

  Buildable:              True
  Extensions:             MultiParamTypeClasses, FunctionalDependencies, BangPatterns, MagicHash, RecursiveDo, NoMonoPatBinds, ForeignFunctionInterface, UnboxedTuples, TypeOperators, FlexibleContexts, ExistentialQuantification, UnliftedFFITypes, TypeSynonymInstances, FlexibleInstances
  GHC-Options:            -Wall -funbox-strict-fields -fspec-constr-count=10 -fno-warn-orphans
  if flag(force-O2)
    ghc-options: -O2
  if flag(devel)
    ghc-prof-options: -auto-all

test-suite regex-tdfa-unittest
  type:                 exitcode-stdio-1.0
  build-depends:        regex-base >= 0.93.1, base >=4  && < 5, regex-tdfa >= 0.92, bytestring, containers, array, mtl, file-embed, filepath, utf8-string
  hs-source-dirs:       test
  main-is:              Main.hs
  extensions:           FlexibleInstances, FlexibleContexts,Rank2Types
  GHC-Options:          -Wall -funbox-strict-fields
  if flag(force-O2)
    ghc-options: -O2
  if flag(devel)
    ghc-prof-options: -auto-all
  if !impl(ghc >= 8.0)
    build-depends:      fail
